--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,20 @@
     <string name="submit_btn">Pay</string>
     <string name="reset_btn">Clear</string>
     <string name="zero_str">0</string>
+
+    <!-- Default text for Open Website -->
+    <string name="edittext_uri">http://www.cbc.ca</string>
+    <!-- Button label for Open Website [CHAR LIMIT=20]-->
+    <string name="button_uri">Open Website</string>
+    <!-- Default text for Open Location [CHAR LIMIT=30]-->
+    <string name="edittext_loc">Gatineau Park</string>
+    <!-- Button label for Open Location [CHAR LIMIT=20]-->
+    <string name="button_loc">Open Location</string>
+    <!-- Default text for Share This Text [CHAR LIMIT=NONE]-->
+    <string name="edittext_share">Just bought the flowers</string>
+    <!-- Button label for Share This Text [CHAR LIMIT=20]-->
+    <string name="button_share">Share This Text</string>
+    <string name="view_contacts_button">View Contacts</string>
+    <string name="phone_hint">Enter phone number</string>
+    <string name="phone_button">Dial</string>
 </resources>
